Added HomeActivity, Splash Screen, Mobile Phone registration screen. Completed MobilePhoneRegistration Screen UI.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">HZTBApplication</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_splash_screen">SplashScreen</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_home_screen">HomeScreen</string>
+    <string name="title_activity_mobile_phone_registration">Registration</string>
 </resources>
