--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
     <string name="app_name">HZTBApplication</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
+    <string name="string_howzBuddy_overview">HowZThisBuddy is a platform to provide peer &amp; friends feedback on a suitability of product in real time. By entering into this site you allow the product vendor to send mobile promotions in future</string>
+    <string name="string_phoneNumber">Phone No</string>
+    <string name="string_registration_content_otp">(Country code followed by phone number)</string>
+    <string name="string_registration_vertification_content">Verification code will be sent to your phone as SMS</string>
+    <string name="string_submit">Submit</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_home_screen">HomeScreen</string>
