--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="signUp_google">Google +</string>
     <string name="signUp_twitter">Twitter</string>
     <string name="signup_Done">Done</string>
+    <string name="gcm_defaultSenderId">24397121204</string>
 </resources>
