--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,8 @@
     <string name="actionbar_title">Title</string>
     <string name="string_plus">+</string>
     <string name="shared_pref_app">HZTB</string>
-
+    <string name="country_search_hint">Search </string>
+    <string name="country_choose">"Choose A Country</string>
 
     <string name="verify_phone_number">We Will be verifying the phone number:</string>
     <string name="verify_ok_or_not">Is this OK, or Would you like to edit the number ?</string>
