Created Contacts Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,11 +57,11 @@
     <string name="permission_read_phone_state_rationale">Read Phone State</string>
 
 
-
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_request_opinion">RequestOpinion</string>
     <string name="capture_selfie">CAPTURE SELFIE</string>
     <string name="invite_buddy">INVITE BUDDY</string>
     <string name="string_select_from_contacts">Select From Contacts</string>
+    <string name="title_activity_contacts">ContactsActivity</string>
 </resources>
