--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,13 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
     <string name="string_howzBuddy_overview">HowZThisBuddy is a platform to provide peer &amp; friends feedback on a suitability of product in real time. By entering into this site you allow the product vendor to send mobile promotions in future</string>
+    <string name="string_registration_overview">HowZThisBuddy will send an sms message to verify your phone number. Enter your country code and phone number: </string>
     <string name="string_phoneNumber">Phone No</string>
     <string name="string_registration_content_otp">(Country code followed by phone number)</string>
-    <string name="string_registration_vertification_content">Verification code will be sent to your phone as SMS</string>
+    <string name="string_registration_vertification_content">Carrier SMS charges may apply</string>
     <string name="string_submit">Submit</string>
     <string name="string_content_phone">Please confirm your country code and enter your phone number</string>
-    <string name="string_confirmRegistration">Confirm Registration</string>
+    <string name="string_confirmRegistration">Verify</string>
     <string name="string_enter_your_otp_code">Enter your verification code</string>
     <string name="string_registration_button_verify">VERIFY</string>
     <string name="string_registration_timer_warning">If you do not receive your access code within 60 seconds, Press Send Again</string>
@@ -18,17 +19,17 @@
     <string name="actionbar_title">Title</string>
     <string name="string_plus">+</string>
     <string name="shared_pref_app">HZTB</string>
-    <string name="country_search_hint">Search </string>
-    <string name="country_choose">"Choose A Country</string>
+    <string name="country_search_hint">Search... </string>
+    <string name="country_choose">Choose a country</string>
 
-    <string name="verify_phone_number">We Will be verifying the phone number:</string>
-    <string name="verify_ok_or_not">Is this OK, or Would you like to edit the number ?</string>
+    <string name="verify_phone_number">We will be verifying the phone number:</string>
+    <string name="verify_ok_or_not">Is this OK, or would you like to edit the number ?</string>
 
     <string name="verify_edit">Edit</string>
     <string name="verify_ok">Ok</string>
 
     <string name="title_activity_home_screen">HomeScreen</string>
-    <string name="title_activity_mobile_phone_registration">Registration</string>
+    <string name="title_activity_mobile_phone_registration">Verify your phone number</string>
     <string name="title_activity_confirm_registration">ConfirmRegistration</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
     <string name="profile_title">Profile</string>
