--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,5 @@
     <string name="group_name">Group Name</string>
     <string name="add_grouptext">Add</string>
     <string name="send_group_name">Send</string>
+    <string name="view_selfie">View Selfie</string>
 </resources>
