--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,5 @@
     <string name="message_notification">Message notification</string>
     <string name="conversation_tones">Conversation tones</string>
     <string name="play_sounds_for_incoming_and_outgoing_messages">Play sounds for incoming and outgoing messages</string>
+    <string name="refresh">Refresh</string>
 </resources>
