Workflow for profile screen and also background saving

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,8 @@
     <string name="permissions_not_granted_read_phone_state">Permission Not Granted</string>
     <string name="permission_read_phone_state_rationale">Read Phone State</string>
 
+    <string name="permission_read_gallery">Read Gallery</string>
+
     <string name="permission_read_contact">Read Contacts</string>
 
     <!-- TODO: Remove or change this placeholder text -->
